--- a/ios_lottostat/Controller/Recommend/RecommendViewController.storyboard
+++ b/ios_lottostat/Controller/Recommend/RecommendViewController.storyboard
@@ -106,6 +106,9 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isVertical" value="NO"/>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="horizontal" value="YES"/>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="onGenerateLottoNumber:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="a1Y-7d-kmx"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7C0-Gk-Qlm" userLabel="no_content">
                                 <rect key="frame" x="0.0" y="156" width="414" height="656"/>
