--- a/ios_lottostat/Controller/MyLotto/ItemMyLottoDate.xib
+++ b/ios_lottostat/Controller/MyLotto/ItemMyLottoDate.xib
@@ -9,38 +9,41 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ItemMyLottoDate" customModule="ios_lottostat" customModuleProvider="target">
-            <connections>
-                <outlet property="lbDate" destination="Ovh-IX-8UL" id="XK4-X0-uwd"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ItemMyLottoDate" customModule="ios_lottostat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022-01-03 09:49:33" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ovh-IX-8UL">
-                    <rect key="frame" x="26" y="7" width="134" height="16"/>
+                    <rect key="frame" x="16" y="0.0" width="134" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="mPa-o8-vnv"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="cCn-Lx-bmE"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
             <constraints>
-                <constraint firstItem="Ovh-IX-8UL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="26" id="9UL-Mg-3cX"/>
-                <constraint firstItem="Ovh-IX-8UL" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bSw-Cv-n1b"/>
+                <constraint firstItem="Ovh-IX-8UL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="9UL-Mg-3cX"/>
+                <constraint firstItem="Ovh-IX-8UL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="KyH-bP-hLl"/>
+                <constraint firstItem="cCn-Lx-bmE" firstAttribute="bottom" secondItem="Ovh-IX-8UL" secondAttribute="bottom" id="v5y-qA-c5X"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="lbDate" destination="Ovh-IX-8UL" id="rg0-al-KCT"/>
+            </connections>
             <point key="canvasLocation" x="128" y="72"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
