--- a/ios_lottostat/Controller/MyLotto/ItemMyLottoSection.xib
+++ b/ios_lottostat/Controller/MyLotto/ItemMyLottoSection.xib
@@ -8,20 +8,18 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ItemMyLottoHeader" customModule="ios_lottostat" customModuleProvider="target">
-            <connections>
-                <outlet property="imgArrow" destination="Y9r-Ej-k6h" id="hhe-kI-nyP"/>
-                <outlet property="lbNo" destination="hzp-jd-n5t" id="rT4-U7-QT3"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ItemMyLottoSection" customModule="ios_lottostat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="48"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="890회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hzp-jd-n5t">
-                    <rect key="frame" x="26" y="14.5" width="334" height="19.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <rect key="frame" x="26" y="0.0" width="334" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="apF-qK-RWy"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -39,12 +37,17 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Y9r-Ej-k6h" secondAttribute="trailing" constant="26" id="5Cd-GC-elI"/>
                 <constraint firstItem="Y9r-Ej-k6h" firstAttribute="leading" secondItem="hzp-jd-n5t" secondAttribute="trailing" constant="4" id="6UX-vx-pHx"/>
                 <constraint firstItem="Y9r-Ej-k6h" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Y4m-vN-lPq"/>
+                <constraint firstItem="hzp-jd-n5t" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="bph-Qt-Fba"/>
+                <constraint firstItem="hzp-jd-n5t" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="l4Z-1M-HBf"/>
                 <constraint firstItem="hzp-jd-n5t" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="26" id="lW2-Df-mC7"/>
-                <constraint firstItem="hzp-jd-n5t" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="yqc-D4-pxs"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="imgArrow" destination="Y9r-Ej-k6h" id="Ywb-KT-x3w"/>
+                <outlet property="lbNo" destination="hzp-jd-n5t" id="j2B-Q9-VUx"/>
+            </connections>
             <point key="canvasLocation" x="132" y="70"/>
         </view>
     </objects>
