--- a/ios_lottostat/Controller/MyLotto/MyLottoViewController.storyboard
+++ b/ios_lottostat/Controller/MyLotto/MyLottoViewController.storyboard
@@ -24,10 +24,9 @@
                                     <constraint firstAttribute="height" constant="50" id="ex4-j0-KOx"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="48" sectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eqc-rU-fad">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="48" sectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eqc-rU-fad">
                                 <rect key="frame" x="0.0" y="94" width="414" height="768"/>
                                 <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="tlW-5A-O4L"/>
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="y1W-td-hZ1"/>
